--- a/ButtonTypeTest/MainPage.xaml
+++ b/ButtonTypeTest/MainPage.xaml
@@ -9,6 +9,6 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        <local:MyButton  VerticalAlignment="Center" ButtonType="TopState"/>
+        <local:MyButton  VerticalAlignment="Center" HorizontalAlignment="Center" ButtonType="HiddenTopState"/>
     </Grid>
 </Page>
